# SerialPortApplication

./: .gitignore
SerialPortApp/: CMakeLists.txt  UseFullLinuxCommands.txt  build.bat  build.sh  clean.bat  clean.sh  configure.bat  configure.sh  run.bat  run.sh
SerialPortApp/BuildDirWin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SerialPortApp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
SerialPortApp/BuildDirWin/Client/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Client.sln  Client.vcxproj  Client.vcxproj.filters
SerialPortApp/BuildDirWin/Common/: Common.vcxproj  Common.vcxproj.filters
SerialPortApp/BuildDirWin/Logger/: Logger.vcxproj  Logger.vcxproj.filters
SerialPortApp/BuildDirWin/Server/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Server.sln  Server.vcxproj  Server.vcxproj.filters
SerialPortApp/Client/: CMakeLists.txt
SerialPortApp/Client/src/: main.cpp
SerialPortApp/Client/src/ClientComponent/: ClientComponent.cpp  ClientComponent.h
SerialPortApp/Client/src/ClientManager/: ClientManager.cpp  ClientManager.h  ClientProcessorFacade.cpp  ClientProcessorFacade.h
SerialPortApp/Client/src/ClientManager/ClientUtils/: ClientUtils.cpp  ClientUtils.h
SerialPortApp/Client/src/ClientManager/Processors/: FirstCommandProcessor.cpp  FirstCommandProcessor.h  InvalidCommandProcessor.cpp  InvalidCommandProcessor.h
SerialPortApp/Client/src/Commands/: FirstCommand.cpp  FirstCommand.h  InvalidCommand.cpp  InvalidCommand.h  InvalidRequestCommand.cpp  InvalidRequestCommand.h  SecondCommand.cpp  SecondCommand.h
SerialPortApp/Common/: CMakeLists.txt
SerialPortApp/Common/include/: CRCGenerator.h  CommandManager.h  Constants.h  EndianController.h  IConnection.h  IManager.h  ISerialConnection.h  SerialConnectionFactory.h
SerialPortApp/Common/include/Commands/: BaseCommand.h  ByteStream.h  CommandHeader.h  CommandProcessorFacade.h  CommandReceiverFacade.h  CommandUtils.h  DataElements.h  FirstCommand.h  ICommand.h  ICommandProcessor.h  IDeserializableCommand.h  ISerializableCommand.h  InvalidCommand.h  InvalidRequestCommand.h  SecondCommand.h
SerialPortApp/Common/include/Commands/Data/: DataA.h
SerialPortApp/Common/include/SerialConfiguration/: ISerialConfigReader.h  ISerialConnection.h  SerialConfigReader.h  SerialConfigReaderFactory.h  SerialConfiguration.h  SerialConnectionFactory.h
SerialPortApp/Common/src/: CRCGenerator.cpp  CommandManager.cpp  EndianController.cpp  LinuxSerialConnection.h  SerialConfigReader.cpp  SerialConnectionFactory.cpp  WindowsSerialConnection.h
SerialPortApp/Common/src/Commands/: BaseCommand.cpp  ByteStream.cpp  CommandHeader.cpp  CommandProcessorFacade.cpp  CommandUtils.cpp  DataElements.cpp  FirstCommand.cpp  InvalidCommand.cpp  InvalidRequestCommand.cpp  SecondCommand.cpp
SerialPortApp/Common/src/Commands/Data/: DataA.cpp
SerialPortApp/Common/src/SerialConfiguration/: LinuxSerialConnection.cpp  LinuxSerialConnection.h  SerialConfigReader.cpp  SerialConfigReaderFactory.cpp  SerialConnectionFactory.cpp  WindowsSerialConnection.cpp  WindowsSerialConnection.h
SerialPortApp/Configuration/: AllconfigurationTypes.csv  PortConfigurationClient.csv  PortConfigurationServer.csv
SerialPortApp/Logger/: CMakeLists.txt
SerialPortApp/Logger/include/: Logger.h
SerialPortApp/Logger/src/: Logger.cpp
SerialPortApp/Logger/src/SocketClient/: ISocketClient.h  SocketClientHandler.cpp  SocketClientHandler.h
SerialPortApp/Logger/src/SocketClient/Linux/: LinuxSocketClient.cpp  LinuxSocketClient.h
SerialPortApp/Logger/src/SocketClient/Windows/: WindowsSocketClient.cpp  WindowsSocketClient.h
SerialPortApp/Server/: CMakeLists.txt
SerialPortApp/Server/src/: ApplicationState.h  IManager.h  ServerConstants.h  Specs.h  main.cpp
SerialPortApp/Server/src/Commands/: FirstCommand.cpp  FirstCommand.h  InvalidCommand.cpp  InvalidCommand.h  InvalidRequestCommand.cpp  InvalidRequestCommand.h  SecondCommand.cpp  SecondCommand.h
SerialPortApp/Server/src/ServerComponent/: ServerComponent.cpp  ServerComponent.h
SerialPortApp/Server/src/ServerManager/: ServerManager.cpp  ServerManager.h  ServerProcessorFacade.cpp  ServerProcessorFacade.h
SerialPortApp/Server/src/ServerManager/Processors/: ResponseCommandProcessor.cpp  ResponseCommandProcessor.h
SerialPortApp/Server/src/UserManager/: UserInputType.h  UserManager.cpp  UserManager.h
SerialPortApp/Server/src/UserManager/CommandReceiver/: CommandReceiverFactory.cpp  CommandReceiverFactory.h  ICommandReceiver.h  ServerCommandReceiver.cpp  ServerCommandReceiver.h
SerialPortApp/Server/src/UserManager/CommandReceiver/CommandReader/: CommandReader.cpp  CommandReader.h  CommandReaderFactory.cpp  CommandReaderFactory.h  ICommandReader.h
SerialPortApp/Server/src/UserManager/CommandReceiver/CommandReader/CommandParser/: FirstCommandParser.cpp  FirstCommandParser.h  ICommandParser.h
SerialPortApp/Server/src/UserManager/UserCommandHandler/: IUserCommandHandler.h  InvalidUserCommandHandler.cpp  InvalidUserCommandHandler.h  UserCommandHandlerFacade.cpp  UserCommandHandlerFacade.h  UserFirstCommandHandler.cpp  UserFirstCommandHandler.h
SerialPortApp/Server/src/UserManager/UserCommandHandler/UserCommandConverter/: FirstCommandUserConverter.cpp  FirstCommandUserConverter.h  IUserCommandConverter.h  InvalidUserCommandConverter.cpp  InvalidUserCommandConverter.h
SerialPortApp/Server/src/UserManager/UserReceiver/: IUserReceiver.h  UserReceiver.cpp  UserReceiver.h  UserReceiverFactory.cpp  UserReceiverFactory.h
SerialPortApp/ServerCommands/: Commands.csv
Tools/Logger/: LogConfiguration.csv  LogConfiguration.py  LogSaver.py  Logger.py  LoggerTextGUI.py  Message.py  MessageHandler.py  MessageReceiverManager.py  UdpServer.py  pyinstallerCommand.txt
